// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Alert component > renders alert with title and description 1`] = `
<div>
  <div
    class="_alert_af20a0 _info_af20a0 _hasIcon_af20a0 "
    data-dark-mode="false"
    role="alert"
  >
    <div
      class="_icon_af20a0"
    >
      <svg
        height="16"
        viewBox="0 0 24 24"
        width="16"
      >
        <path
          clip-rule="evenodd"
          d="M11.5 21a8.5 8.5 0 1 1 0-17 8.5 8.5 0 0 1 0 17zM13 8.878c0-1.27-.499-1.896-1.496-1.878C10.501 7.03 10 7.68 10 8.95c0 .737.17 1.647.51 2.731l.318.98c.081.245.14.413.175.503.197.533.376.811.537.835.15.018.314-.248.493-.8.083-.257.161-.512.233-.763.071-.252.146-.503.224-.755.34-1.12.51-2.054.51-2.803zM11.5 18a1 1 0 1 0 0-2 1 1 0 0 0 0 2z"
          fill-rule="evenodd"
        />
      </svg>
    </div>
    <div
      class="_content_af20a0"
    >
      <div
        class="_title_af20a0"
      >
        Test Title
      </div>
      <div
        class="_description_af20a0"
      >
        Test Description
      </div>
    </div>
  </div>
</div>
`;

exports[`Alert component > renders dismissible alert with close button 1`] = `
<div>
  <div
    class="_alert_af20a0 _info_af20a0 _hasIcon_af20a0 "
    data-dark-mode="false"
    role="alert"
  >
    <div
      class="_icon_af20a0"
    >
      <svg
        height="16"
        viewBox="0 0 24 24"
        width="16"
      >
        <path
          clip-rule="evenodd"
          d="M11.5 21a8.5 8.5 0 1 1 0-17 8.5 8.5 0 0 1 0 17zM13 8.878c0-1.27-.499-1.896-1.496-1.878C10.501 7.03 10 7.68 10 8.95c0 .737.17 1.647.51 2.731l.318.98c.081.245.14.413.175.503.197.533.376.811.537.835.15.018.314-.248.493-.8.083-.257.161-.512.233-.763.071-.252.146-.503.224-.755.34-1.12.51-2.054.51-2.803zM11.5 18a1 1 0 1 0 0-2 1 1 0 0 0 0 2z"
          fill-rule="evenodd"
        />
      </svg>
    </div>
    <div
      class="_content_af20a0"
    >
      <div
        class="_description_af20a0"
      >
        Dismissible alert
      </div>
    </div>
    <button
      aria-label="Dismiss alert"
      class="_dismissButton_af20a0"
      type="button"
    >
      <svg
        fill="none"
        height="24"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          clip-rule="evenodd"
          d="M11.4309 12L6.28445 6.85355C6.08918 6.65829 6.08918 6.34171 6.28445 6.14645C6.47971 5.95118 6.79629 5.95118 6.99155 6.14645L12.138 11.2929L17.2844 6.14645C17.4797 5.95118 17.7963 5.95118 17.9916 6.14645C18.1868 6.34171 18.1868 6.65829 17.9916 6.85355L12.8451 12L17.9916 17.1464C18.1868 17.3417 18.1868 17.6583 17.9916 17.8536C17.7963 18.0488 17.4797 18.0488 17.2844 17.8536L12.138 12.7071L6.99155 17.8536C6.79629 18.0488 6.47971 18.0488 6.28445 17.8536C6.08918 17.6583 6.08918 17.3417 6.28445 17.1464L11.4309 12Z"
          fill="#262E3D"
          fill-opacity="0.67"
          fill-rule="evenodd"
        />
      </svg>
    </button>
  </div>
</div>
`;

exports[`Alert component > renders error variant correctly 1`] = `
<div>
  <div
    class="_alert_af20a0 _error_af20a0 _hasIcon_af20a0 "
    data-dark-mode="false"
    role="alert"
  >
    <div
      class="_icon_af20a0"
    >
      <svg
        height="16"
        viewBox="0 0 24 24"
        width="16"
      >
        <path
          clip-rule="evenodd"
          d="M11.5 21a8.5 8.5 0 1 1 0-17 8.5 8.5 0 0 1 0 17zM13 8.878c0-1.27-.499-1.896-1.496-1.878C10.501 7.03 10 7.68 10 8.95c0 .737.17 1.647.51 2.731l.318.98c.081.245.14.413.175.503.197.533.376.811.537.835.15.018.314-.248.493-.8.083-.257.161-.512.233-.763.071-.252.146-.503.224-.755.34-1.12.51-2.054.51-2.803zM11.5 18a1 1 0 1 0 0-2 1 1 0 0 0 0 2z"
          fill-rule="evenodd"
        />
      </svg>
    </div>
    <div
      class="_content_af20a0"
    >
      <div
        class="_title_af20a0"
      >
        Error
      </div>
      <div
        class="_description_af20a0"
      >
        Error message
      </div>
    </div>
  </div>
</div>
`;

exports[`Alert component > renders info variant correctly 1`] = `
<div>
  <div
    class="_alert_af20a0 _info_af20a0 _hasIcon_af20a0 "
    data-dark-mode="false"
    role="alert"
  >
    <div
      class="_icon_af20a0"
    >
      <svg
        height="16"
        viewBox="0 0 24 24"
        width="16"
      >
        <path
          clip-rule="evenodd"
          d="M11.5 21a8.5 8.5 0 1 1 0-17 8.5 8.5 0 0 1 0 17zM13 8.878c0-1.27-.499-1.896-1.496-1.878C10.501 7.03 10 7.68 10 8.95c0 .737.17 1.647.51 2.731l.318.98c.081.245.14.413.175.503.197.533.376.811.537.835.15.018.314-.248.493-.8.083-.257.161-.512.233-.763.071-.252.146-.503.224-.755.34-1.12.51-2.054.51-2.803zM11.5 18a1 1 0 1 0 0-2 1 1 0 0 0 0 2z"
          fill-rule="evenodd"
        />
      </svg>
    </div>
    <div
      class="_content_af20a0"
    >
      <div
        class="_title_af20a0"
      >
        Info
      </div>
      <div
        class="_description_af20a0"
      >
        Info message
      </div>
    </div>
  </div>
</div>
`;

exports[`Alert component > renders warning variant correctly 1`] = `
<div>
  <div
    class="_alert_af20a0 _warning_af20a0 _hasIcon_af20a0 "
    data-dark-mode="false"
    role="alert"
  >
    <div
      class="_icon_af20a0"
    >
      <svg
        height="16"
        viewBox="0 0 24 24"
        width="16"
      >
        <path
          clip-rule="evenodd"
          d="M11.5 21a8.5 8.5 0 1 1 0-17 8.5 8.5 0 0 1 0 17zM13 8.878c0-1.27-.499-1.896-1.496-1.878C10.501 7.03 10 7.68 10 8.95c0 .737.17 1.647.51 2.731l.318.98c.081.245.14.413.175.503.197.533.376.811.537.835.15.018.314-.248.493-.8.083-.257.161-.512.233-.763.071-.252.146-.503.224-.755.34-1.12.51-2.054.51-2.803zM11.5 18a1 1 0 1 0 0-2 1 1 0 0 0 0 2z"
          fill-rule="evenodd"
        />
      </svg>
    </div>
    <div
      class="_content_af20a0"
    >
      <div
        class="_title_af20a0"
      >
        Warning
      </div>
      <div
        class="_description_af20a0"
      >
        Warning message
      </div>
    </div>
  </div>
</div>
`;

exports[`Alert component > renders without title 1`] = `
<div>
  <div
    class="_alert_af20a0 _info_af20a0 _hasIcon_af20a0 "
    data-dark-mode="false"
    role="alert"
  >
    <div
      class="_icon_af20a0"
    >
      <svg
        height="16"
        viewBox="0 0 24 24"
        width="16"
      >
        <path
          clip-rule="evenodd"
          d="M11.5 21a8.5 8.5 0 1 1 0-17 8.5 8.5 0 0 1 0 17zM13 8.878c0-1.27-.499-1.896-1.496-1.878C10.501 7.03 10 7.68 10 8.95c0 .737.17 1.647.51 2.731l.318.98c.081.245.14.413.175.503.197.533.376.811.537.835.15.018.314-.248.493-.8.083-.257.161-.512.233-.763.071-.252.146-.503.224-.755.34-1.12.51-2.054.51-2.803zM11.5 18a1 1 0 1 0 0-2 1 1 0 0 0 0 2z"
          fill-rule="evenodd"
        />
      </svg>
    </div>
    <div
      class="_content_af20a0"
    >
      <div
        class="_description_af20a0"
      >
        Description only
      </div>
    </div>
  </div>
</div>
`;
